--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -6,6 +6,14 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>webapp Maven Webapp</name>
 	<url>http://maven.apache.org</url>
+
+	<properties>
+		<java.version>8</java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	</properties>
+
+
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -31,6 +39,20 @@
 
 	</dependencies>
 	<build>
+
 		<finalName>webapp</finalName>
+
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.0</version>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+				</configuration>
+			</plugin>
+		</plugins>
+
 	</build>
 </project>
