--- a/connectivity/pom.xml
+++ b/connectivity/pom.xml
@@ -29,7 +29,8 @@
 							<goal>copy-dependencies</goal>
 						</goals>
 						<configuration>
-							<outputDirectory>${project.build.directory}/lib</outputDirectory>
+							<!-- <outputDirectory>${project.build.directory}/lib</outputDirectory> -->
+							<outputDirectory>${project.build.directory}/classes/lib</outputDirectory>
 							<overWriteReleases>false</overWriteReleases>
 							<overWriteSnapshots>false</overWriteSnapshots>
 							<overWriteIfNewer>true</overWriteIfNewer>
@@ -58,6 +59,70 @@
 				</configuration>
 				<version>2.9</version>
 			</plugin>
+
+			<!-- <plugin>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>3.2.1</version>
+				<executions>
+				<execution>
+				<phase>package</phase>
+				<goals>
+				<goal>shade</goal>
+				</goals>
+				</execution>
+				</executions>
+				<configuration>
+				<keepDependenciesWithProvidedScope>true</keepDependenciesWithProvidedScope>
+				<createDependencyReducedPom>true</createDependencyReducedPom>
+				<filters>
+				<filter>
+				<artifact>*:*</artifact>
+				<excludes>
+				<exclude>META-INF/*.SF</exclude>
+				<exclude>META-INF/*.DSA</exclude>
+				<exclude>META-INF/*.RSA</exclude>
+				</excludes>
+				</filter>
+				</filters>
+				</configuration>
+				</plugin> -->
+
+			<!-- <plugin>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>
+				<archive>
+				<manifest>
+				<addClasspath>true</addClasspath>
+				<classpathPrefix>lib/</classpathPrefix>
+				<mainClass>${start-class}</mainClass>
+				<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+				</manifest>
+				</archive>
+				</configuration>
+
+				</plugin> -->
+
+
+			<!-- <plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.2.1</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<recompressZippedFiles>false</recompressZippedFiles>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+			</plugin> -->
+
 		</plugins>
 	</build>
 
