--- a/connectivity/src/main/resources/connectivity.properties
+++ b/connectivity/src/main/resources/connectivity.properties
@@ -11,5 +11,5 @@ RABBITMQ_PASSWORD=admin
 MONGODB_IP=192.168.56.105
 MONGODB_PORT=27017
 MONGODB_DATABASE=hsmgp
-MONGODB_USERNAME=hsmgpadmin
+MONGODB_USERNAME=hsmgp
 MONGODB_PASSWORD=1q2w3e4r5t!@#$%
