--- a/tsop-connectivityexternal/src/main/resources/application.properties
+++ b/tsop-connectivityexternal/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+# ===================================================================
+# Server Configuration
+# ===================================================================
+server.port=8080
 
