--- a/tsop-connectivityexternal/src/main/resources/application.properties
+++ b/tsop-connectivityexternal/src/main/resources/application.properties
@@ -3,3 +3,28 @@
 # ===================================================================
 server.port=8080
 
+
+# ===================================================================
+# HikariCP DataSource
+# ===================================================================
+#spring.datasource.hikari.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.hikari.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+
+#spring.datasource.hikari.jdbc-url=jdbc:sqlserver://adt-dev-kc-tsop-sqlmi.public.1e4e405f38d5.database.windows.net:3342;user=tsopadmin@adt-dev-kc-tsop-sqlmi;password={your_password_here};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.1e4e405f38d5.database.windows.net;loginTimeout=30;
+#spring.datasource.hikari.jdbc-url=jdbc:sqlserver://adt-dev-kc-tsop-sqlmi.public.1e4e405f38d5.database.windows.net:3342;user=tsodev@adt-dev-kc-tsop-sqlmi;password={your_password_here};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.1e4e405f38d5.database.windows.net;loginTimeout=30;
+
+#spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:sqlserver://adt-dev-kc-tsop-sqlmi.public.1e4e405f38d5.database.windows.net:3342;user=tsopadmin@adt-dev-kc-tsop-sqlmi;password={your_password_here};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.1e4e405f38d5.database.windows.net;loginTimeout=30;
+spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:sqlserver://adt-dev-kc-tsop-sqlmi.public.1e4e405f38d5.database.windows.net:3342;user=tsodev@adt-dev-kc-tsop-sqlmi;password={your_password_here};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.1e4e405f38d5.database.windows.net;loginTimeout=30;
+
+spring.datasource.hikari.username=tso_dev2
+spring.datasource.hikari.password=!qwer1234nt
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.connection-test-query=SELECT 1
+
+# ===================================================================
+# MyBatis
+# ===================================================================
+mybatis.configuration.map-underscore-to-camel-case=true
+# mapper.xml \uc704\uce58 \uc9c0\uc815
+# **\uc740 \ud558\uc704 \ud3f4\ub354 \ub808\ubca8\uc5d0 \uc0c1\uad00\uc5c6\uc774 \ubaa8\ub4e0 \uacbd\ub85c\ub97c \ub73b\ud558\uba70, *\ub294 \uc544\ubb34 \uc774\ub984\uc774\ub098 \uc640\ub3c4 \ub41c\ub2e4\ub294\uac83\uc744 \ub73b\ud569\ub2c8\ub2e4.
+#mybatis.mapper-locations: mapper/**/*.xml
