--- a/tsop-connectivityexternal/.gitignore
+++ b/tsop-connectivityexternal/.gitignore
@@ -4,6 +4,13 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+
+### Maven ###
+/target
+/bin
+/build
+
+
 ### STS ###
 .apt_generated
 .classpath
